<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.soartech</groupId>
    <artifactId>jsoar</artifactId>
    <version>4.1.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>JSoar is a pure Java implementation of the Soar kernel.</description>
    <url>https://github.com/soartech/jsoar</url>
    <licenses>
        <license>
            <name>BSD-3-Clause</name>
            <url>https://opensource.org/licenses/BSD-3-Clause</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Bob Marinier</name>
            <email>bob.marinier@soartech.com</email>
            <organization>SoarTech</organization>
            <organizationUrl>https://soartech.com/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/uniknow/jsoar.git</connection>
        <developerConnection>scm:git:https://github.com/uniknow/jsoar.git</developerConnection>
        <url>https://github.com/uniknow/jsoar/tree/maven/</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>15</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <junit-jupiter.version>5.7.1</junit-jupiter.version>

        <sonar.projectKey>UniKnow_jsoar</sonar.projectKey>
        <sonar.moduleKey>${artifactId}</sonar.moduleKey>
        <sonar.organization>uniknow</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>

    </properties>

    <build>
        <plugins>

            <plugin>
                <groupId>com.coveo</groupId>
                <artifactId>fmt-maven-plugin</artifactId>
                <version>2.10</version>
                <executions>
                    <execution>
                        <id>format-code</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.6</version>
                <executions>
                    <execution>
                        <id>prepare-jacoco</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>create-report-jacoco</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <skipTests>false</skipTests>
                </configuration>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.20</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>30.1-jre</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.30</version>
        </dependency>
        <!--JUnit Jupiter Engine to depend on the JUnit5 engine and JUnit 5 API -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <!--JUnit Jupiter Engine to depend on the JUnit4 engine and JUnit 4 API  -->
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>${junit-jupiter.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.9.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
        <snapshotRepository>
            <id>soartech-internal-snapshots</id>
            <name>SoarTech Snapshots</name>
            <url>https://nexus.soartech.com:8443/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <!-- 
        <repository>
            <id>soartech-releases</id>
            <name>SoarTech Releases</name>
            <url>https://nexus.soartech.com:8443/nexus/content/repositories/releases/</url>
        </repository>
         -->
    </distributionManagement>

    <modules>
        <!-- <module>jsoar-build</module> only needed for uber jar, which shouldn't be used anyway -->
        <module>jsoar-core</module>
        <module>jsoar-debugger</module>
        <module>jsoar-demos</module>
        <module>jsoar-legilimens</module>
        <!-- <module>jsoar-ruby</module> -->
        <module>jsoar-soar2soar</module>
        <module>jsoar-soarunit</module>
        <module>jsoar-tcl</module>
        <module>jsoar-performance-testing</module>
        <module>jsoar-repl</module>
    </modules>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.2.0</version>
                        <configuration>
                            <show>private</show>
                            <doclint>none</doclint>
                            <source>${java.version}</source>

                            <!-- if you want javadoc errors to fail the build, comment this -->
                            <failOnError>false</failOnError>

                            <!-- START: Enable asciidoclet -->
                            <additionalJOptions>
                                <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
                                <additionalJOption>--base-dir</additionalJOption>
                                <additionalJOption>${project.basedir}</additionalJOption>
                            </additionalJOptions>
                            <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
                            <docletArtifact>
                                <groupId>org.uniknow</groupId>
                                <artifactId>asciidoclet</artifactId>
                                <version>2.2.2</version>
                            </docletArtifact>
                            <detectJavaApiLink>true</detectJavaApiLink>
                            <!-- END: Enable asciidoclet -->

                        </configuration>
                        <executions>
                            <execution>
                                <id>aggregate</id>
                                <goals>
                                    <goal>aggregate</goal>
                                </goals>
                                <phase>install</phase>
                                <configuration>
                                    <!-- Specific configuration for the aggregate report -->
                                </configuration>
                            </execution>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.2.0</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                        <version>3.0.0-M1</version><!--$NO-MVN-MAN-VER$-->
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>
</project>
